--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,15 @@ matrix:
         - pip install -e .[tests]
       script:
         - nose2 -s opennmt/v2/tests
+        - pylint opennmt/v2/
     - python: "3.6"
       env:
         - TF_VERSION="$LATEST_TF_VERSION"
       install:
         - pip install pylint==2.1.1 wheel twine
       script:
-        - nose2
-        - pylint opennmt/
+        - nose2 -s opennmt/tests
+        - pylint --ignore=v2 opennmt/
       after_success:
         - |
               if [[ -n $TRAVIS_TAG ]]; then
