Quick update of WMT script

--- a/scripts/wmt/config/wmt_ende.yml
+++ b/scripts/wmt/config/wmt_ende.yml
@@ -5,14 +5,13 @@ data:
   train_labels_file: data/train.de
   eval_features_file: data/valid.en
   eval_labels_file: data/valid.de
-  source_words_vocabulary: data/wmtende.vocab
-  target_words_vocabulary: data/wmtende.vocab
+  source_vocabulary: data/wmtende.vocab
+  target_vocabulary: data/wmtende.vocab
 
 train:
   save_checkpoints_steps: 1000
 
 eval:
-  eval_delay: 3600  # Every 1 hour
   external_evaluators: BLEU
 
 infer:
