--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-recommonmark
+recommonmark==0.6.*
 sphinx-markdown-tables==0.0.9
-sphinx==2.1.*
-sphinx_rtd_theme
+sphinx-rtd-theme==0.4.*
+sphinx==2.2.*
