--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ before_script:
   - mkdir -p $TRAVIS_BUILD_DIR/testdata
   - tar xf transliteration-aren-v2.tar.gz -C $TRAVIS_BUILD_DIR/testdata
 script:
-  - nose2
+  - nose2 -v
 matrix:
   include:
     - python: "3.6"
       install:
         - pip install pylint==2.3.* wheel twine
       script:
-        - nose2
+        - nose2 -v
         - pylint opennmt/
       after_success:
         - |
