--- a/unittest.cfg
+++ b/unittest.cfg
@@ -3,5 +3,6 @@ start-dir = opennmt
 test-file-pattern = *_test.py
 
 [coverage]
-always-on = False
+always-on = True
 coverage = opennmt
+coverage-report = xml
