--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -e .[tests]
+          python -m pip install -e .[tests,tensorflow-cpu]
 
       - name: Check code format with Black
         run: |
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install tensorflow==${{ matrix.tensorflow }}.*
+          python -m pip install tensorflow-cpu==${{ matrix.tensorflow }}.*
           python -m pip install -e .[tests]
 
       - name: Download test data
@@ -115,7 +115,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -e .
+          python -m pip install -e .[tensorflow-cpu]
           python -m pip install -r docs/requirements.txt
 
       - name: Build docs
