Use isort to automatically organize imports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           black --check .
 
+      - name: Check imports order with isort
+        run: |
+          isort --check-only .
+
       - name: Check code style with Flake8
         if: ${{ always() }}
         run: |
