--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,7 @@ ignore =
 per-file-ignores =
   # Allow import not at top.
   opennmt/__init__.py:E402
+
+[isort]
+profile=black
+lines_between_types=1
