--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,7 @@ jobs:
 
       - name: Upload coverage report
         if: matrix.tensorflow == '2.6'
-        run: |
-          bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v2
 
 
   build-and-deploy-package:
