--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,8 +119,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -e .[tensorflow]
-          python -m pip install -r docs/requirements.txt
+          python -m pip install -e .[tensorflow,docs]
 
       - name: Build docs
         run: |
