--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tensorflow: [2.4, 2.5, 2.6, 2.7, 2.8, 2.9]
+        tensorflow: [2.6, 2.7, 2.8, 2.9]
 
     steps:
       - uses: actions/checkout@v2
