--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tensorflow: [2.6, 2.7, 2.8, 2.9, 2.10]
+        tensorflow: [2.6, 2.7, 2.8, 2.9, '2.10']
 
     steps:
       - uses: actions/checkout@v2
