--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
@@ -47,10 +47,10 @@ jobs:
         tensorflow: [2.6, 2.7, 2.8, 2.9, '2.10', '2.11']
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
@@ -72,7 +72,7 @@ jobs:
 
       - name: Upload coverage report
         if: matrix.tensorflow == '2.11'
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
 
 
   build-and-deploy-package:
@@ -80,10 +80,10 @@ jobs:
     needs: [lint-check, test]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
@@ -108,12 +108,12 @@ jobs:
     needs: [lint-check, test]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           persist-credentials: false
 
       - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
@@ -128,9 +128,7 @@ jobs:
 
       - name: Deploy docs
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/build
-          CLEAN: true
+          folder: docs/build
+          clean: true
