--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tensorflow: [2.6, 2.7, 2.8, 2.9, '2.10', '2.11', '2.12']
+        tensorflow: [2.6, 2.7, 2.8, 2.9, '2.10', '2.11', '2.12', '2.13']
 
     steps:
       - uses: actions/checkout@v3
@@ -71,7 +71,7 @@ jobs:
           pytest --cov=opennmt --cov-report xml opennmt/tests
 
       - name: Upload coverage report
-        if: matrix.tensorflow == '2.12'
+        if: matrix.tensorflow == '2.13'
         uses: codecov/codecov-action@v3
 
 
